force all text to lowecase on main blog page

--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,13 @@ layout: main
 ---
 
 
+<style>
+body {
+    text-transform: lowercase;
+}
+</style>
+
+
 <div class="contentbox contents">
     <h1 class="display-1 breakword">sohl<wbr>il<wbr>oq<wbr>uies</h1>
     <hr>
