updated projects page

--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,10 @@ layout: main
     <div id="visuals-details" class="display-none">
         <br/>
         <center>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FRhoHzBTGBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ud2mIeJ_IJU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <p>
-            That's me on the right!
+            That's me on the right! The music isn't mine but the projections all are.
             <br/>
             <small>(for the full concert, see <a href="https://www.youtube.com/watch?v=bZUzoteuH9g">here</a>)</small>
             </p>
