--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@ layout: main
     <hr>
 
     <p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
-    <p>you can also find me <a href="https://twitter.com/elisohl">on twitter</a>, where my DMs are open</p>
-    <p>for signal, ask over twitter or email</p>
-    <p>my public key fingerprint is 0BC8 3D5B 2208 AEC9 2592 6DFF 451D 2B18 0A83 7DEB</p>
+    <p>i am no longer active on <a href="https://twitter.com/elisohl">on twitter</a>. for the moment i'm trying out <a href="https://bsky.app/profile/elisohl.bsky.social">bluesky</a></p>
+    <p>for signal, feel free to ask over <s>twitter or</s> email</p>
+    <p>you can also find my work email through my employer</p>
 
 </div>
