big reorg + new content

--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,13 @@
 ---
 layout: main
+header: con<wbr>tact
 ---
 
+{% include navlinks.html target="contact" %}
 
-<div class="contentbox contents">
-    <h1 class="display-1 breakword">con<wbr>tact</h1>
+<hr>
 
-    <hr>
-
-    <div class="overflow-hidden" id="navlinks">
-        <span>
-            <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | contact
-        </span>
-        {% include switcher.html %}
-    </div>
-
-    <hr>
-
-    <p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
-    <p>i am no longer active on <a href="https://twitter.com/elisohl">on twitter</a>. for the moment i'm trying out <a href="https://bsky.app/profile/elisohl.bsky.social">bluesky</a></p>
-    <p>for signal, feel free to ask over <s>twitter or</s> email</p>
-    <p>you can also find my work email through my employer</p>
-
-</div>
+<p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
+<p>i am no longer active on <a href="https://twitter.com/elisohl">on twitter</a>. for the moment i'm trying out <a href="https://bsky.app/profile/elisohl.bsky.social">bluesky</a></p>
+<p>for signal, feel free to ask over <s>twitter or</s> email</p>
+<p>you can also find my work email through my employer</p>
