--- a/blog.html
+++ b/blog.html
@@ -1,32 +1,23 @@
 ---
 layout: main
+header: sohl<wbr>il<wbr>oq<wbr>uies
 ---
 
 
 <style>
 body {
-    text-transform: lowercase;
+  text-transform: lowercase;
 }
 </style>
 
+{% include navlinks.html target="blog" %}
 
-<div class="contentbox contents">
-    <h1 class="display-1 breakword">sohl<wbr>il<wbr>oq<wbr>uies</h1>
-    <hr>
-    <div class="overflow-hidden" id="navlinks">
-        <span>
-            blog | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
-        </span>
-        {% include switcher.html %}
-    </div>
-    <hr>
+<hr>
 
-    {% for post in site.posts %}
-    <div>
-        <h6 class="mb-0">{{ post.date | date: "%-d %B %Y" }}</h6>
-        <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-    </div>
-    <br>
-    {% endfor %}
-
+{% for post in site.posts %}
+<div>
+  <h6 class="mb-0">{{ post.date | date: "%-d %B %Y" }}</h6>
+  <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 </div>
+<br>
+{% endfor %}
