--- a/recs.html
+++ b/recs.html
@@ -20,22 +20,8 @@ that.
 {% assign reclist = site.data.recs.list | sort: 'title' %}
 
 {% for rec in reclist %}
-{{ rec.title }}<br/>
+{{ rec.title | downcase }}<br/>
 {% endfor %}
-
-<!--
-{% for project in site.data.projects %}
-{% assign slug = project.name | slugify %}
-<h2 class="project-row" onclick="do_toggle('#{{slug}}-details');">
-  {{project.name}} <span>+</span>
-</h2>
-<div id="{{slug}}-details" class="display-none">
-  {% for paragraph in project.details %}
-  <p>{{paragraph}}</p>
-  {% endfor %}
-</div>
-{% endfor %}
--->
 
 <hr class="simple">
 <div class="pb-3 fancy"></div>
