--- a/contact.html
+++ b/contact.html
@@ -9,5 +9,5 @@ header: con<wbr>tact
 
 <p>you can reach me by email: take this site's hostname and replace the first . with an @</p>
 <p>i am no longer active on <a href="https://twitter.com/elisohl">on twitter</a>. for the moment i'm trying out <a href="https://bsky.app/profile/elisohl.bsky.social">bluesky</a></p>
-<p>for signal, feel free to ask over <s>twitter or</s> email</p>
+<p>for signal, feel free to ask over email</p>
 <p>you can also find my work email through my employer</p>
