--- a/recs.html
+++ b/recs.html
@@ -9,12 +9,11 @@ header: recs
 <hr>
 
 <p>
-This is a collection of books I've read and enjoyed. There's a handful of other
-media in there too. I've tried writing reviews, but I think I'm not critical
-enough: all I really want to do is share the good stuff, so here's some of
-that.
+This is a collection of books I've read and enjoyed. I've tried writing
+reviews, but I think I'm not critical enough: all I really want to do is share
+the good stuff, so here's some of that.
 </p>
-<p>TODO: write descriptions and xrefs</p>
+<p>todo: finish writing descriptions + xrefs</p>
 
 
 {% assign reclist = site.data.recs.list | sort: 'title' %}
